--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
 
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="style.css">
 
   
 </head>
@@ -93,7 +93,7 @@
 
   
 
-    <script  src="js/index.js"></script>
+    <script  src="index.js"></script>
 
 
 
