--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@ img:last-of-type {
 
   <div id="title" class="slide header">
   <h1>Ore Arowobusoye Art 321</h1>
+	  <p color="white> Link to assingment 1 </p>
 </div>
 
 
