--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Pure CSS Parallax Scrolling</title>
+  <title>Art 321</title>
   
   
   
@@ -142,7 +142,7 @@ img:last-of-type {
 
   <div id="title" class="slide header">
   <h1>Ore Arowobusoye Art 321</h1>
-	  <p color="white> Link to assingment 1 </p>
+	  <p color="white"> Link to assingment 1 </p>
 </div>
 
 
