--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ img:last-of-type {
 
   <div id="title" class="slide header">
   <h1>Ore Arowobusoye Art 321</h1>
-	  <a color="white" href="a1/index.html"> Link to assingment 1 </a>
+	  <a href="a1/index.html"> Link to assingment 1 </a>
 </div>
 
 
