--- a/a1/index.html
+++ b/a1/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>CSS and SVG Masks</title>
+  <title> Ore's Tips and Tricks for Creative Writing </title>
   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 
@@ -364,24 +364,16 @@ code:before {
   <h1>CSS and SVG Masks</h1>
   <div class="item item--clip">
     <div class="demo">
-      <img src="https://img-fotki.yandex.ru/get/5607/5091629.6b/0_612e6_b9039c0d_M.jpg" alt="" class="has-mask"/>
+      <img src="https://ae01.alicdn.com/kf/HTB1ho_Td8smBKNjSZFFq6AT9VXaa/7x5FT-Rainbow-Sky-Green-Lantern-Castle-Palace-Entrance-Custom-Photo-Background-Studio-Backdrop-Vinyl-220cm-x.jpg_640x640.jpg" alt="" class="has-mask"/>
     </div>
     <div class="text">
-      <h3>CSS clip</h3>
+      <h3>Setting</h3>
       <a href="http://www.w3.org/TR/2014/WD-css-masking-1-20140213/#clip-property">Specification</a>
       <br /><br />
       <code class="code--css"><pre>.item {
-  position: absolute;
-  clip: rect(10px, 190px, 190px, 10px);
+One of the first things you want to do when writing a story is to estabish a setting. This setting can be anything from a school library (realistic) to
+a fantasy realm. But the important thing is: is your setting full of rich details. Is it full and verbose enough for your readers?
   }</pre></code>
-      <ul class="browsers">
-        <li class="browser chrome has-support"></li>
-        <li class="browser safari has-support"></li>
-        <li class="browser opera-13 has-support"></li>
-        <li class="browser firefox has-support"></li>
-        <li class="browser ie9 has-support"></li>
-        <li class="browser opera-12 has-support"></li>
-      </ul>
     </div>  
   </div>
   <!-- ********* -->   
