--- a/a1/index.html
+++ b/a1/index.html
@@ -355,7 +355,7 @@ code:before {
                  patternUnits="userSpaceOnUse"
                  width="200" height="300" 
                  viewbox="0 0 200 300">
-          <image xlink:href="https://img-fotki.yandex.ru/get/5607/5091629.6b/0_612e6_b9039c0d_M.jpg" width="200" height="300" />
+          <image xlink:href="https://ae01.alicdn.com/kf/HTB1ho_Td8smBKNjSZFFq6AT9VXaa/7x5FT-Rainbow-Sky-Green-Lantern-Castle-Palace-Entrance-Custom-Photo-Background-Studio-Backdrop-Vinyl-220cm-x.jpg_640x640.jpg"  width="200" height="300" />
         </pattern>
    </defs>
 </svg>
@@ -371,8 +371,8 @@ code:before {
       <a href="http://www.w3.org/TR/2014/WD-css-masking-1-20140213/#clip-property">Specification</a>
       <br /><br />
       <code class="code--css"><pre>.item {
-One of the first things you want to do when writing a story is to estabish a setting. This setting can be anything from a school library (realistic) to
-a fantasy realm. But the important thing is: is your setting full of rich details. Is it full and verbose enough for your readers?
+One of the first things you want to do when writing a story is to estabish a setting.      <br /><br /> This setting can be anything from a school library (realistic) to
+a fantasy realm.      <br /><br /> But the important thing is: is your setting full of rich details.       <br /><br />Is it full and verbose enough for your readers?
   }</pre></code>
     </div>  
   </div>
