--- a/a1/index.html
+++ b/a1/index.html
@@ -364,13 +364,13 @@ code:before {
   <h1>CSS and SVG Masks</h1>
   <div class="item item--clip">
     <div class="demo">
-      <img src="https://ae01.alicdn.com/kf/HTB1ho_Td8smBKNjSZFFq6AT9VXaa/7x5FT-Rainbow-Sky-Green-Lantern-Castle-Palace-Entrance-Custom-Photo-Background-Studio-Backdrop-Vinyl-220cm-x.jpg_640x640.jpg" alt="" class="has-mask"/>
+      <img src="https://render.fineartamerica.com/images/rendered/search/poster/images-medium-5/regaleira-palace-i-marco-oliveira.jpg" alt="" class="has-mask"/>
     </div>
     <div class="text">
       <h3>Setting</h3>
       <a href="http://www.w3.org/TR/2014/WD-css-masking-1-20140213/#clip-property">Specification</a>
       <br /><br />
-      <code class="code--css"><pre>.item {
+      <code class="code--css"><
 One of the first things you want to do when writing a story is to estabish a setting.      <br /><br /> This setting can be anything from a school library (realistic) to
 a fantasy realm.      <br /><br /> But the important thing is: is your setting full of rich details.       <br /><br />Is it full and verbose enough for your readers?
   }</pre></code>
@@ -379,10 +379,10 @@ a fantasy realm.      <br /><br /> But the important thing is: is your setting f
   <!-- ********* -->   
   <div class="item item--css-clip-path">
     <div class="demo">
-       <img src="https://img-fotki.yandex.ru/get/5607/5091629.6b/0_612e6_b9039c0d_M.jpg" alt="" />
+       <img src="http://ghostwithinstudio.com/images/Kiera.png" alt="" />
     </div>  
     <div class="text">
-      <h3>CSS clip-path</h3>
+      <h3>Characters</h3>
       <a href="http://www.w3.org/TR/2014/WD-css-masking-1-20140213/#the-clip-path">Specification</a>
       <br /><br />
       <code class="code--css"><pre>.item {
