--- a/a1/index.html
+++ b/a1/index.html
@@ -361,10 +361,10 @@ code:before {
 </svg>
 
 <div class="wrapper">
-  <h1>CSS and SVG Masks</h1>
+  <h1>Ore's Tips and tricks for creative writing</h1>
   <div class="item item--clip">
     <div class="demo">
-      <img src="https://render.fineartamerica.com/images/rendered/search/poster/images-medium-5/regaleira-palace-i-marco-oliveira.jpg" alt="" class="has-mask"/>
+      <img src="https://render.fineartamerica.com/images/rendered/search/poster/images-medium-5/regaleira-palace-i-marco-oliveira.jpg" alt=""/>
     </div>
     <div class="text">
       <h3>Setting</h3>
