--- a/a1/index.html
+++ b/a1/index.html
@@ -70,6 +70,8 @@ i {
 /* Common 
 ------------------------------------------- */
 BODY {
+  background-image: url("https://cdn4.vectorstock.com/i/1000x1000/62/98/seamless-wave-hand-drawn-pattern-waves-background-vector-2066298.jpg");
+  background-repeat: repeat;
   font: 12px/1.4 "Trebuchet MS", Arial, sans-serif;
 }
 
