--- a/a1/index.html
+++ b/a1/index.html
@@ -407,10 +407,10 @@ a fantasy realm.      <br /><br /> But the important thing is: is your setting f
  <!-- ********* -->   
 <div class="item item--clip">
     <div class="demo">
-      <img src="https://rawlse.files.wordpress.com/2016/11/cyrus-example-hair.jpg?w=199&h=300" alt=""/>
+      <img src="https://blog.ackertinc.com/hubfs/Imported_Blog_Media/What-are-your-revenue-routines-1.jpg?t=1526581444736" alt=""/>
     </div>
     <div class="text">
-      <h3>Characters</h3>
+      <h3>Summary</h3>
       <a href="http://www.w3.org/TR/2014/WD-css-masking-1-20140213/#clip-property">An example story for characters</a>
       <br /><br />
       <code class="code--css">
@@ -427,23 +427,28 @@ th, td {
 </head>
 <body>
 
-<h2>Table Caption</h2>
-<p>To add a caption to a table, use the caption tag.</p>
+<h2>Some simple do's and don'ts for writing a story</h2>
 
 <table style="width:100%">
-  <caption>Monthly savings</caption>
+  <caption>Do's and don'ts</caption>
   <tr>
-    <th>Month</th>
-    <th>Savings</th>
+    <th>Trick</th>
+    <th>Should you do this?</th>
   </tr>
   <tr>
-    <td>January</td>
-    <td>$100</td>
+    <td>Create an interesting character with a lot of personality and background and a vivid description</td>
+    <td>YES</td>
   </tr>
   <tr>
-    <td>February</td>
-    <td>$50</td>
+    <td>Create a character who is the hero! Who has amazing super powers and wins everything ALL THE TIME</td>
+    <td>NO</td>
   </tr>
+    <tr>
+    <td>Plot is very important, create a plot that is engaging and has your character engage with other characters/ the plot</td>
+    <td>YES</td>
+  </tr>
+  
+  
 </table>
 
         
