--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@ img:last-of-type {
 
   <div id="title" class="slide header">
   <h1>Ore Arowobusoye Art 321</h1>
-	 <a href="https://orearow.github.io/art321/a1/index.html">Link to assigment 1</a>
 
 </div>
+	 <a href="https://orearow.github.io/art321/a1/index.html">Link to assigment 1!</a>
 
 
 
