--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@ img:last-of-type {
 
 </div>
 	 <a href="https://orearow.github.io/art321/a1/index.html">Link to assigment 1!</a>
+	 <a href="https://orearow.github.io/art321/a2/index.html">Link to assigment 2!</a>
 
 
 
