--- a/a2/index.html
+++ b/a2/index.html
@@ -327,7 +327,7 @@ code:before {
   <h1>Assignment 2 Modify Images</h1>
   <div class="item item--clip">
     <div class="demo">
-      <img src="https://render.fineartamerica.com/images/rendered/search/poster/images-medium-5/regaleira-palace-i-marco-oliveira.jpg" alt=""/>
+      <img src="http://i1197.photobucket.com/albums/aa429/Ore_Arowobusoye/box_threshold_1.gif" alt=""/>
     </div>
     <div class="text">
       <h3>Setting</h3>
