--- a/a2/index.html
+++ b/a2/index.html
@@ -318,18 +318,15 @@ code:before {
                  patternUnits="userSpaceOnUse"
                  width="200" height="300" 
                  viewbox="0 0 200 300">
-          <image xlink:href="https://ae01.alicdn.com/kf/HTB1ho_Td8smBKNjSZFFq6AT9VXaa/7x5FT-Rainbow-Sky-Green-Lantern-Castle-Palace-Entrance-Custom-Photo-Background-Studio-Backdrop-Vinyl-220cm-x.jpg_640x640.jpg"  width="200" height="300" />
         </pattern>
    </defs>
 </svg>
 
-<div class="wrapper">
+<div>
   <h1>Assignment 2 Modify Images</h1>
-  <div class="item item--clip">
-    <div class="demo">
-      <img src="http://i1197.photobucket.com/albums/aa429/Ore_Arowobusoye/box_threshold_1.gif" alt=""/>
+  <div>
+      <img src="box_threshold_1.gif" alt=""/>
          <img src="http://i1197.photobucket.com/albums/aa429/Ore_Arowobusoye/cat_threshold_98.png" alt=""/>
-    </div>
   </div>
   </div>
  <!-- ********* -->   
