--- a/a2/index.html
+++ b/a2/index.html
@@ -323,10 +323,13 @@ code:before {
 </svg>
 
 <div>
-  <h1>Assignment 2 Modify Images</h1>
+  <h1>Assignment 2: Modify Images</h1>
   <div>
-      <img src="box_threshold_1.gif" alt=""/>
+      <img src="a2/box_threshold_1.gif" alt=""/>
+    
          <img src="http://i1197.photobucket.com/albums/aa429/Ore_Arowobusoye/cat_threshold_98.png" alt=""/>
+             <img src="a2/writing_threshold_105.jpg" alt=""/>
+
   </div>
   </div>
  <!-- ********* -->   
