--- a/a2/index.html
+++ b/a2/index.html
@@ -325,10 +325,12 @@ code:before {
 <div>
   <h1>Assignment 2: Modify Images</h1>
   <div>
-      <img src="a2/box_threshold_1.gif" alt=""/>
+      <img src="box_threshold_1.gif" alt=""/>
     
-         <img src="http://i1197.photobucket.com/albums/aa429/Ore_Arowobusoye/cat_threshold_98.png" alt=""/>
-             <img src="a2/writing_threshold_105.jpg" alt=""/>
+         <img src="cat_threshold_98.png" alt=""/>
+             <img src="writing_threshold_105.jpg" alt=""/>
+             <img src="circle_one_done.png" alt=""/>
+             <img src="circle_one_done_grey.png" alt=""/>
 
   </div>
   </div>
