--- a/a2/index.html
+++ b/a2/index.html
@@ -1,43 +1,43 @@
 
   <h1>Assignment 2: Modify Images</h1>
-  <div>
+  <div align="left">
       <img src="box_threshold_1.gif" alt=""/>
 
  </div>
 
-  <div>
+  <div align="left">
 
  <img src="cat_threshold_98.png" alt=""/>
  </div>
  
- <div>
+ <div align="left">
  <img src="writing_threshold_105.jpg" alt/>
  </div>
 
- <div>   
+ <div align="left">   
  <img src="circle_one_done.png" alt=""/>
  </div>
- <div>   
+ <div align="left">   
  <img src="circle_one_done_grey.png" alt=""/>
  </div>
 
 
- <div>   
+ <div align="left">   
  <img src="circle_two_done.png" alt=""/>
  </div>
- <div>   
+ <div align="left">   
  <img src="circle_two_done_grey.png" alt=""/>
  </div>
 
 
- <div>   
+ <div align="left">   
  <img src="circle_three_done.png" alt=""/>
  </div>
- <div>   
+ <div align="left">   
  <img src="circle_three_done_grey.png" alt=""/>
  </div>
 
 
- <div>   
+ <div align="left">   
  <img src="sheet_music_edges_found.jpg" alt=""/>
  </div>
