--- a/a2/index.html
+++ b/a2/index.html
@@ -15,26 +15,26 @@
  </div>
 
  <div align="left">   
- <img src="circle_one_done.png" alt=""/>
+ <img src="circle_one_done_1.png" alt=""/>
  </div>
  <div align="left">   
- <img src="circle_one_done_grey.png" alt=""/>
- </div>
-
-
- <div align="left">   
- <img src="circle_two_done.png" alt=""/>
- </div>
- <div align="left">   
- <img src="circle_two_done_grey.png" alt=""/>
+ <img src="circle_one_done_grey_1.png" alt=""/>
  </div>
 
 
  <div align="left">   
- <img src="circle_three_done.png" alt=""/>
+ <img src="circle_two_done_1.png" alt=""/>
  </div>
  <div align="left">   
- <img src="circle_three_done_grey.png" alt=""/>
+ <img src="circle_two_done_grey_1.png" alt=""/>
+ </div>
+
+
+ <div align="left">   
+ <img src="circle_three_done_1.png" alt=""/>
+ </div>
+ <div align="left">   
+ <img src="circle_three_done_grey_1.png" alt=""/>
  </div>
 
 
