--- a/a2/index.html
+++ b/a2/index.html
@@ -2,16 +2,34 @@
   <h1>Assignment 2: Modify Images</h1>
   <div align="left">
       <img src="box_threshold_1.gif" alt=""/>
-
+  <br>
+  <br>
+  <br>
+ <p> for this image I chose a threshold value of 1. This is because it is at this threshold value
+   that I can seee the text conceiled by the image </p>
  </div>
 
   <div align="left">
 
  <img src="cat_threshold_98.png" alt=""/>
  </div>
- 
+   <br>
+  <br>
+  <br>
+ <p> for this image I chose a threshold value of 98. This is because it is at this threshold value that
+I believe the cat looks fully like a cat. My reasoning for this is that all cats can be recognized by their unusal 
+slit eyes. I beleive that it is exactly at threshold 98 that we can see that eye very clearly</p>
+ </div>
  <div align="left">
  <img src="writing_threshold_105.jpg" alt/>
+  <br>
+  <br>
+  <br>
+ <p> for this image I chose a threshold value of 105. I chose this value because the text is now black and the background
+   is white and there is a minimal ammount of noise in the image. I do not believe that there is a single "best" threshold 
+   image. This is because the threshold of this image is very much a spectrum. Choosing a threshold value of 104 or 106 
+   would produce a very similar image. Besides that, the ammount of acceptable "noise" whitest background and backest text
+   is arbitrary as well. </p>
  </div>
 
  <div align="left">   
@@ -20,6 +38,7 @@
  <div align="left">   
  <img src="circle_one_done_grey_1.png" alt=""/>
  </div>
+  <h2>Next I have circle/box coloured images followed by their respective grey-scaled image</h2>
 
 
  <div align="left">   
@@ -40,4 +59,15 @@
 
  <div align="left">   
  <img src="sheet_music_edges_found.jpg" alt=""/>
+   
+   
+   
+<br>
+  <br>
+  <br>
+ <p> there are a few flaws in the enhanced image. One of the flaws (that I believe is a flaw) is that it seems that 
+   the image (perhaps a photocopy) has another page behind it that is slightly (even if translucently so) visible. 
+   Another flaw is that not every single edge was found in that many of our quarter/ eigth notes are still black instead
+   of hollow. From a person who would want to play this sheet music another flaw is the reduced visibility and probably 
+   confusion that this page would cause</p>
  </div>
