--- a/index.html
+++ b/index.html
@@ -145,7 +145,9 @@ img:last-of-type {
 
 </div>
 	 <a href="https://orearow.github.io/art321/a1/index.html">Link to assigment 1!</a>
-	 <a href="https://orearow.github.io/art321/a2/index.html">Link to assigment 2!</a>
+	<br>
+	 <a href="https://orearow.github.io/art321/a2/index.html">Link to assigment 2!</a>	<br>
+	 <a href="https://orearow.github.io/art321/a3/index.html">Link to assigment 3!</a>
 
 
 
