--- a/a3/index.html
+++ b/a3/index.html
@@ -164,5 +164,8 @@ I would develp an algorithm to make sure that images do not overlap each other u
     <br> 
     <p> and that is a wrap! That is the plan for my net art piece! I hope you like it! :) </p>
     
+    <h2> Citations </h2>
+    <p> the images used for the harrry potter icons were found here: https://www.behance.net/gallery/33018221/Harry-Potter-Icons
+    
  </div>
 
