--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@ img:last-of-type {
 	<br>
 	 <a href="https://orearow.github.io/art321/a2/index.html">Link to assigment 2!</a>	<br>
 	 <a href="https://orearow.github.io/art321/a3/index.html">Link to assigment 3!</a>
+	 <a href="https://orearow.github.io/art321/a4/index.html">Link to assigment 4!</a>
 
 
 
