--- a/a4/index.html
+++ b/a4/index.html
@@ -1,4 +1,16 @@
- <h1>Assignment 4 - animation</h1>
+<head>
+
+<style> 
+ 
+ img {
+    width:250px; /* you can use % */
+    height: auto;
+}
+ 
+</style>
+</head>
+
+<h1>Assignment 4 - animation</h1>
 
    <br>
   <br>
@@ -50,7 +62,7 @@
    <h2> Here are my animation as a video (sound!!!!) </h2>
  <div align="left">
  
- <video width="320" height="240" autoplay>
+ <video width="320" height="240" >
   <source src="witch.mp4" type="video/mp4">
 </video>
 </div>
