--- a/a4/index.html
+++ b/a4/index.html
@@ -3,7 +3,7 @@
 <style> 
  
  img {
-    width:250px; /* you can use % */
+    width:350px; /* you can use % */
     height: auto;
 }
  
@@ -47,6 +47,7 @@
       <img src="frame2.jpg" alt=""/>
       <img src="frame3.jpg" alt=""/>
       <img src="frame4.jpg" alt=""/>
+      <img src="frame5.jpg" alt=""/>
 
   <br>
   </div>
@@ -55,15 +56,19 @@
   
  <h2> Here are my animation in gif form (no sound) </h2>
  <div align="left">
-      <img src="witch.gif" alt=""/>
+      <img src="witch2.gif" alt=""/>
   <br>
   </div>
   
    <h2> Here are my animation as a video (sound!!!!) </h2>
  <div align="left">
  
- <video width="320" height="240" >
+
+  <video width="320" height="240" controls>
   <source src="witch.mp4" type="video/mp4">
+
+Your browser does not support the video tag.
 </video>
+  
 </div>
   <br>
