--- a/a4/index.html
+++ b/a4/index.html
@@ -20,7 +20,7 @@
  <h2> Here are my early sketches </h2>
  <h3> Sketch 1 </h3>
    <div align="left">
-      <img src="sketch1.jpg" alt=""/>
+      <img src="sketch1_d.jpg" alt=""/>
       <p> in this sketch I added lots of detail to the witch and had her reading from a spellbook.
       My ambitious plan was to have her flip the pages of the book </p> 
   <br>
@@ -28,14 +28,14 @@
    <h3> Sketch 2 </h3>
 
     <div align="left">
-      <img src="sketch2.jpg" alt=""/>
+      <img src="sketch2_d.jpg" alt=""/>
       <p> in this sketch I made my witch less detailed and zoomed out of the scene </p> 
   <br>
   </div>
   <h3> Sketch 3 (digital sketch) </h3>
 
     <div align="left">
-      <img src="sketch3.jpg" alt=""/>
+      <img src="sketch3_d.jpg" alt=""/>
       <p> this is the first digital sketch I made. I realized that things are harder to create digitally with a wonky stylus and ipad
       than a pen and paper so my witch lost detail and my design became much more simplistic </p> 
   <br>
@@ -43,10 +43,10 @@
 
  <h2> Here are my frames </h2>
  <div align="left">
-      <img src="frame2.jpg" alt=""/>
-      <img src="frame3.jpg" alt=""/>
-      <img src="frame4.jpg" alt=""/>
-      <img src="frame5.jpg" alt=""/>
+      <img src="frame1_d.jpg" alt=""/>
+      <img src="frame2_d.jpg" alt=""/>
+      <img src="frame3_d.jpg" alt=""/>
+      <img src="frame4_d.jpg" alt=""/>
 
   <br>
   </div>
