--- a/a4/index.html
+++ b/a4/index.html
@@ -43,8 +43,8 @@
 
  <h2> Here are my frames </h2>
  <div align="left">
-      <img src="frame1_d.jpg" alt=""/>
-      <img src="frame2_d.jpg" alt=""/>
+      <img src="frame1d.jpg" alt=""/>
+      <img src="frame2d.jpg" alt=""/>
       <img src="frame3_d.jpg" alt=""/>
       <img src="frame4_d.jpg" alt=""/>
 
