--- a/index.html
+++ b/index.html
@@ -149,6 +149,8 @@ img:last-of-type {
 	 <a href="https://orearow.github.io/art321/a2/index.html">Link to assigment 2!</a>	<br>
 	 <a href="https://orearow.github.io/art321/a3/index.html">Link to assigment 3!</a><br>
 	 <a href="https://orearow.github.io/art321/a4/index.html">Link to assigment 4!</a>
+<br>
+		 <a href="https://orearow.github.io/art321/a5/index.html">Link to assigment 5!</a>
 
 
 
