--- a/index.html
+++ b/index.html
@@ -151,6 +151,8 @@ img:last-of-type {
 	 <a href="https://orearow.github.io/art321/a4/index.html">Link to assigment 4!</a>
 <br>
 		 <a href="https://orearow.github.io/art321/a5/index.html">Link to assigment 5!</a>
+<br>
+			 <a href="https://orearow.github.io/art321/a6/index.html">Link to assigment 6!</a>
 
 
 
