--- a/index.html
+++ b/index.html
@@ -154,8 +154,9 @@ img:last-of-type {
 <br>
 			 <a href="https://orearow.github.io/art321/a6/index.html">Link to assigment 6!</a>
 <br> 
-				 <a href="https://orearow.github.io/art321/a7/index.html">Link to assigment 7!</a>
-
+				 <a href="https://orearow.github.io/art321/a7/index.html">Link to assigment 7!</a><br>
+				 <a href="https://orearow.github.io/art321/project/options.html
+">Link to assigment 7!</a>
 
 
 </body>
