--- a/project/options.html
+++ b/project/options.html
@@ -1,5 +1,5 @@
 <script type="text/javascript" src="https://d3js.org/d3.v4.min.js" charset="utf-8"></script>
-<script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
 
 <style type="text/css">
