--- a/project/options.html
+++ b/project/options.html
@@ -472,29 +472,29 @@ li p {
 
  <ul>
     <li >
-    <img  onclick="anthology('cinderella')" src="pallMall.jpg">
+    <img  onclick="anthology('cinderella')" src="cinderella.jpg">
     </li>
 
     <li href="javascript:anthology(cinderella)">
-    <img src="pallMall.jpg">
+    <img src="red_riding_hood.jpg" style="width:220px;height:275px;>
     </li>
     
 
     <li href="javascript:poo(42482)">
-    <img src="pallMall.jpg">
+    <img src="brave_tin_soldier.jpg" style="width:220px;height:275px;>
     </li>
 
     <li href="javascript:poo(42482)">
-    <img src="pallMall.jpg">
+    <img src="goat_with_three_kids.jpg" style="width:220px;height:275px;>
     </li>
         <li href="javascript:poo(42482)">
-    <img src="pallMall.jpg">
+    <img src="the_snow_queen.jpg" style="width:220px;height:275px;>
     </li>
         <li href="javascript:poo(42482)">
-    <img src="pallMall.jpg">
+    <img src="the_snow_white.jpg" style="width:220px;height:275px;>
     </li>
         <li href="javascript:poo(42482)">
-    <img src="pallMall.jpg">
+    <img src="the_little_mermaid.jpg" style="width:220px;height:275px;>
     </li>
         <li href="javascript:poo(42482)">
     <img src="pallMall.jpg">
@@ -730,6 +730,7 @@ function prelim_function(myData, filename){
         .append("h2")
         .data(myData)
         .text(function(d){
+
           console.log(d)
           return d.title;
         })
