--- a/project/example3.html
+++ b/project/example3.html
@@ -16,8 +16,11 @@
   <h1 class="heading-primary">
   	<br>
   	<br>
+        <br>
+        <br>
+
     <span class="heading-primary-main">Explore</span>
-    <span class="heading-primary-sub"> Fantasy</span>
+    <span class="heading-primary-sub"> Fairy Tales</span>
   </h1>
 
 </div>
@@ -39,4 +42,6 @@
 </body>
 
 <a style = "margin-right:60px" href="options.html" class="button2 b-pink rot-135">Enter the library</a>
-
+ 
+<a style = "margin-right:60px" href="thing.html" class="button2 b-pink rot-135">Popular Fairytale Retellings</a>
+<a style = "margin-right:60px" href="options.html" class="button2 b-pink rot-135">Video 1</a>
